--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@ h5{
               <tbody>
                 <tr>
                     <td>10:00 </td>
-                    <td>C Programming</td>
+                    <td> C Major </td>
                     
-                    <td>C Programming</td>
-                    <td>C Programming</td>
+                    <td>C Major</td>
+                    <td>C Major</td>
                     
-                    <td>C Programming</td>
+                    <td>C Major</td>
                 </tr>
                 <tr>
                     <td>10:40</td>
@@ -206,7 +206,7 @@ h5{
                 <table>
                     <thead>
                       <tr>
-                        <th>C language</th>
+                        <th>C Major</th>
                         <th>Urdu</th>
                         <th>EVS</th>
                         <!-- <th>JS-CSS</th> -->
