--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ h5{
 </div>
      
 <nav>
-    <a href="https://www.linkedin.com/in/muzamil-bashir-8268b4228/" target="_blank" >Created By Muzamil Gashru.   </a>
+    <a href="https://foemusaib.github.io/personal_website/" target="_blank" >Created By Muzamil Gashru.   </a>
 </nav>                   
 
 </body>
