--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ h5{
     </header>
     <nav>
         <a href="http://www.baramullacollege.net/" target="_blank"> SECOND SEMESTER</a>
+	    <a href="http://admissions.baramullacollege.net/login.php" target="_blank">LOG IN</a>
     </nav>
     <main>
         <h2>Timetable</h2>
