--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ h5{
         <h1>BCA Department</h1>
     </header>
     <nav>
-        <a href="http://www.baramullacollege.net/" target="_blank"> SECOND SEMESTER</a>
+        
 	    <a href="http://admissions.baramullacollege.net/login.php" target="_blank">LOG IN</a>
     </nav>
     <main>
@@ -239,7 +239,8 @@ h5{
     </main>
 
          <nav>
-             <a> SYLLABUS </a>
+		 <a> SECOND SEMESTER</a>
+             <a href="http://www.baramullacollege.net/" target="_blank" > SYLLABUS </a>
          </nav>
          
          <!-- NEW LINE START SYLLABUS -->
