--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ h5{
 	    <a href="http://admissions.baramullacollege.net/login.php" target="_blank">LOG IN</a>
     </nav>
     <main>
-        <h2>Timetable</h2>
+        <h2>Timetable for Second Semester</h2>
         <table>
             <thead>
               <tr>
@@ -239,8 +239,8 @@ h5{
     </main>
 
          <nav>
-		 <a> SECOND SEMESTER</a>
-             <a href="http://www.baramullacollege.net/" target="_blank" > SYLLABUS </a>
+		 <a href="http://www.baramullacollege.net/" target="_blank"> COLLAGE </a>
+             <a> SYLLABUS </a>
          </nav>
          
          <!-- NEW LINE START SYLLABUS -->
