--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ h5{
 
          <nav>
             <a href="http://admissions.baramullacollege.net/login.php" target="_blank">LOG IN</a>
-            <a href="http://www.baramullacollege.net/" target="_blank"> COLLAGE</a>
+            <a href="http://www.baramullacollege.net/" target="_blank"> COLLEGE</a>
             
          </nav>
          
