--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ h5{
             <div class="pra">
                 <!-- <p>-</p> -->
                 <p style="text-align: center;">
-                    <a class="button" target="_blank" href=" - -- -- - ">Tap</a>
+                    <a class="button" target="_blank" href="https://publuu.com/flip-book/97298/267012/page/1">Tap</a>
                 </p>
             </div>
         </div>
